--- a/app/composer.json
+++ b/app/composer.json
@@ -16,6 +16,7 @@
         "symfony/yaml": "6.1.*"
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.45",
         "symfony/stopwatch": "6.1.*",
         "symfony/web-profiler-bundle": "6.1.*"
     },
